[package]
name = "quantum_force"
version = "0.1.0"
authors = ["quadruple-output <57874618+quadruple-output@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
angle = "0.4.0"
num-traits = "0.2.14"

[dependencies.bevy]
version = "0.4.0"
features = ["dynamic"]

